# drake

examples/KneedCompassGait/: BUILD.bazel  KCG_common.cpp  KCG_common.h  qpController2.h  qp_multi_step.cpp
examples/compass_gait/: BUILD.bazel  compass_gait.h  simulate.cc
qp_control/: BUILD.bazel  KneedCompassGait.urdf  plan_generator.cc  plan_generator.h  qp_controller.cc  qp_controller.h  simple_walker.cc  simple_walker.h  simulate_simple_walker.cc
